--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,55 @@
+dist: xenial
+
 language: java
+
 jdk:
   - openjdk8
 
+git:
+  depth: 3
+
+cache:
+  directories:
+    - $HOME/.m2
+
 stages:
-  - Build
-  - Release
+  - name: Compile
+  - name: Test
+  - name: Release / Deploy
+    if: repo = 'Taskana/TaskanaAdapter' AND (tag =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ OR branch = master) AND type != pull_request
 
 env:
-  global:
-    - DEPLOY_REPO=Taskana/TaskanaAdapter
-  
+  matrix:
+    - DB=H2
+
+stage: Test
+install: skip
+script: ci/test.sh $DB
+before_cache: rm -rf $HOME/.m2/repository/pro/taskana
+
+matrix:
+  include:
+   
+    # We are using the environment variable 'MODULE' to force travis into using a different cache for each build.
+    # See https://docs.travis-ci.com/user/caching/#caches-and-build-matrices for detailed information on
+    # which characteristics determine the cache selection.
+    - stage: Compile
+      name: taskana-adapter-parent
+      install: skip
+      env: MODULE=ADAPTER
+      script: ci/compile.sh $MODULE
+      before_cache: rm -rf $HOME/.m2/repository/pro/taskana
+
+    - stage: Release / Deploy
+      name: release / deploy / commit
+      before_install: |
+        openssl aes-256-cbc -K "$encrypted_21a5d40e43a3_key" -iv "$encrypted_21a5d40e43a3_iv" \
+        -in "ci/codesigning.asc.enc" -out "ci/codesigning.asc" -d && gpg --import "ci/codesigning.asc"
+      install: ci/change_version.sh -m .
+      script: |
+        mvn deploy -T 4C -P `[[ "$TRAVIS_TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
+        --settings ci/mvnsettings.xml -DskipTests -Dcheckstyle.skip \
+	-pl !:taskana-adapter-tasklistener-example,!:taskana-adapter-test
+      before_cache: rm -rf $HOME/.m2/repository/pro/taskana
+      after_success: ci/change_version.sh -i -m . && ci/commitPoms.sh
+
