--- a/taskana-adapter-tasklistener-example/pom.xml
+++ b/taskana-adapter-tasklistener-example/pom.xml
@@ -182,7 +182,7 @@
                                         <plugin>
                                                 <groupId>org.apache.maven.plugins</groupId>
                                                 <artifactId>maven-surefire-plugin</artifactId>
-                                                <version>${version.maven.surfire.plugin}</version>
+                                                <version>${version.maven.surefire.plugin}</version>
                                         </plugin>
                                 </plugins>
                         </build>
