--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -3,12 +3,12 @@
 ######################################################################################
 ##
 #logging.level.org.springframework=DEBUG
-#logging.level.pro.taskana=DEBUG
+logging.level.pro.taskana=DEBUG
 #logging.level.com.spring.ibatis=DEBUG
 #logging.level.com.spring.ibatis.*=DEBUG
 #logging.level.org.apache.ibatis=DEBUG
 
-logging.level.pro.taskana=info
+#logging.level.pro.taskana=info
 
 ## Set Server Port for Adapter
 server.port = 8081
@@ -24,7 +24,7 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/
+taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080
 
 ####################################################################################
 # Taskana-connector properties
@@ -42,7 +42,7 @@ taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/
 # taskana.datasource.username=db2user
 # taskana.datasource.password=Db2password
 
-taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:50102/postgres
+taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
 taskana.datasource.driverClassName=org.postgresql.Driver
 taskana.datasource.username=postgres
 taskana.datasource.password=postgres
