--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,8 @@
                                 <artifactId>maven-compiler-plugin</artifactId>
                                 <version>${version.maven.compiler}</version>
                                 <configuration>
+                                        <source>${maven.compiler.source}</source>
+                                        <target>${maven.compiler.target}</target>
                                         <showWarnings>true</showWarnings>
                                         <failOnWarning>true</failOnWarning>
                                         <compilerArgs>
