--- a/taskana-adapter-camunda-tasklistener/pom.xml
+++ b/taskana-adapter-camunda-tasklistener/pom.xml
@@ -17,6 +17,11 @@
                         <artifactId>camunda-engine</artifactId>
                         <version>${version.camunda}</version>
                 </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.0</version>
+		</dependency>
         </dependencies>
         <build>
                 <finalName>taskana-parse-listener</finalName>
