--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
         <modelVersion>4.0.0</modelVersion>
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-adapter-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
         <packaging>pom</packaging>
 
         <name>${project.groupId}:${project.artifactId}</name>
@@ -17,8 +17,7 @@
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-                <version.adapter>0.0.2-SNAPSHOT</version.adapter>
-                <version.taskana>1.1.6-SNAPSHOT</version.taskana>
+                <version.taskana>1.1.5-SNAPSHOT</version.taskana>
 
                 <version.maven.jar>3.1.1</version.maven.jar>
                 <version.maven-war-plugin>3.2.2</version.maven-war-plugin>
@@ -104,6 +103,15 @@
                 <module>taskana-adapter-wildfly-example</module>
                 <module>taskana-adapter-test</module>
         </modules>
+
+		<repositories>
+			<repository>
+				<id>snapshots-repo</id>
+				<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				<releases><enabled>false</enabled></releases>
+				<snapshots><enabled>true</enabled></snapshots>
+			</repository>
+		</repositories>
 
 
         <profiles>
