TSK-909 Synchronizing claim/cancel claim of tasks
-Added CamundaTaskClaimer
-Added CamundaTaskClaimCanceler
-Added ReferencedTaskClaimer
-Added ReferencedTaskClaimCanceler
-Added tests
-Adjusted TaskanaSystemConnectorImpl for new CallbackState
-Extended Connector interfaces with needed methods

--- a/taskana-adapter-test/src/main/resources/application.properties
+++ b/taskana-adapter-test/src/main/resources/application.properties
@@ -21,6 +21,7 @@ logging.level.pro.taskana=info
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=1000
+taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=1000
 
 ####################################################################################
