TSK-1005 Fix Outbox-REST for Jersey use
-Added a Wrapper class for a list of CamundaTaskEventResources
-Adjusted CamundaTaskRetriever for new Wrapper return value
-Adjusted RetrieveCamundaTaskAccTest for new Wrapper return value
-Adjusted The CamundaTaskEventsController for new Wrapper return value
-Extended OutboxRestServiceConfig to make it compatible with Jersey AND RestEasy

--- a/taskana-adapter-camunda-outbox-rest/pom.xml
+++ b/taskana-adapter-camunda-outbox-rest/pom.xml
@@ -75,7 +75,7 @@
                         <groupId>org.jboss.resteasy</groupId>
                         <artifactId>jaxrs-api</artifactId>
                         <version>${version.resteasy.jaxrs}</version>
-                        <scope>compile</scope>
+                        <scope>provided</scope>
                 </dependency>
                 <dependency>
                         <groupId>org.mybatis</groupId>
