--- a/taskana-adapter-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-wildfly-example/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.level.pro.taskana=INFO
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=10000
 
 ####################################################################################
