TSK-1006 support oracle database

--- a/taskana-adapter-test/src/main/resources/application.properties
+++ b/taskana-adapter-test/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.main.allow-bean-definition-overriding=true
 #logging.level.com.fasterxml.jackson.*=TRACE
 
 
-logging.level.pro.taskana=info
+logging.level.pro.taskana=INFO
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=1000
@@ -71,10 +71,22 @@ taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
 #H2
 #camunda.datasource.jdbcUrl= jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
 #camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
-camunda.datasource.driverClassName=org.h2.Driver
-camunda.datasource.username=sa
-camunda.datasource.password=sa
+ camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+ camunda.datasource.driverClassName=org.h2.Driver
+ camunda.datasource.username=sa
+ camunda.datasource.password=sa
+
+#Oracle
+#camunda.datasource.jdbcUrl=jdbc:oracle:thin:@localhost:1521:xe
+#camunda.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#camunda.datasource.username=camunda
+#camunda.datasource.password=pwd4Camunda
+
+
+
+#camunda.bpm.database.schema-update=false
+#camunda.bpm.database.schema-name=CAMUNDA
+#camunda.bpm.database.table-prefix=CAMUNDA.
 
 camunda.bpm.admin-user.id = admin
 camunda.bpm.admin-user.password = admin
@@ -83,10 +95,10 @@ camunda.bpm.filter.create = All tasks
 
 
 #Postgres
-## camunda.datasource.jdbcUrl= jdbc:postgresql://localhost:5432/postgres
-## camunda.datasource.driverClassName = org.postgresql.Driver
-## camunda.datasource.username = postgres
-## camunda.datasource.password = postgres
+# camunda.datasource.jdbcUrl= jdbc:postgresql://localhost:5432/postgres
+# camunda.datasource.driverClassName = org.postgresql.Driver
+# camunda.datasource.username = postgres
+# camunda.datasource.password = postgres
 
 ######################################################################################
 ## Testing properties
