--- a/taskana-adapter-test/pom.xml
+++ b/taskana-adapter-test/pom.xml
@@ -30,6 +30,16 @@
                         <scope>test</scope>
                 </dependency>
 
+            <!--
+                <dependency>
+                       <groupId>com.oracle.jdbc</groupId>
+                       <artifactId>ojdbc8</artifactId>
+                       <version>19.3.0.0</version>
+                       <scope>test</scope>
+                </dependency>
+            -->
+
+
                 <!-- Camunda REST Api -->
                 <dependency>
                         <groupId>org.camunda.bpm.springboot</groupId>
@@ -131,6 +141,28 @@
                         <name>novatec-repository</name>
                         <url>https://repository.novatec-gmbh.de/content/repositories/novatec/</url>
                 </repository>
+        <!--
+                <repository>
+                       <id>maven.oracle.com</id>
+                       <releases>
+                       <enabled>true</enabled>
+                       </releases>
+                       <snapshots>
+                         <enabled>false</enabled>
+                       </snapshots>
+                       <url>https://maven.oracle.com</url>
+                       <layout>default</layout>
+               </repository>
+       -->
         </repositories>
+     <!--
+         <pluginRepositories>
+              <pluginRepository>
+                    <id>maven.oracle.com</id>
+                    <url>https://maven.oracle.com</url>
+             </pluginRepository>
+        </pluginRepositories>
+     -->
+
 
 </project>
