--- a/taskana-adapter-test/src/main/resources/datasource.properties
+++ b/taskana-adapter-test/src/main/resources/datasource.properties
@@ -7,3 +7,9 @@ taskana.adapter.outbox.rest.datasource.driver = org.h2.Driver
 taskana.adapter.outbox.rest.datasource.url=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 taskana.adapter.outbox.rest.datasource.username=sa
 taskana.adapter.outbox.rest.datasource.password=sa
+
+
+#taskana.adapter.outbox.rest.datasource.driver=oracle.jdbc.driver.OracleDriver
+#taskana.adapter.outbox.rest.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#taskana.adapter.outbox.rest.datasource.username=camunda
+#taskana.adapter.outbox.rest.datasource.password=pwd4Camunda
