--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -9,7 +9,7 @@
         </parent>
 
         <modelVersion>4.0.0</modelVersion>
-        <artifactId>taskana-adapter-camunda-tasklistener</artifactId>
+        <artifactId>taskana-adapter-camunda-listener</artifactId>
 
         <dependencies>
                 <dependency>
@@ -17,19 +17,19 @@
                         <artifactId>camunda-engine</artifactId>
                         <version>${version.camunda}</version>
                 </dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.10.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.10.0</version>
-		</dependency>
+                <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                        <version>2.10.0</version>
+                </dependency>
+                <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                        <version>2.10.0</version>
+                </dependency>
         </dependencies>
         <build>
-                <finalName>taskana-parse-listener</finalName>
+                <finalName>taskana-adapter-camunda-listener</finalName>
         </build>
 
 </project>
