--- a/taskana-adapter-sample/pom.xml
+++ b/taskana-adapter-sample/pom.xml
@@ -71,6 +71,7 @@
                         <plugin>
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-maven-plugin</artifactId>
+                                <version>${version.spring.boot.maven.plugin}</version>
                         </plugin>
                 </plugins>
         </build>
