--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
                 <version.camunda>7.10.0</version.camunda>
                 <version.camunda.bpm.spring.boot>3.2.0</version.camunda.bpm.spring.boot>
                 <version.camunda.bpm.extensions>1.2</version.camunda.bpm.extensions>
+                <version.camunda.spin.engine.plugin>7.10.0</version.camunda.spin.engine.plugin>
+                <version.camunda.spin.dataformat.json.jackson>1.7.3</version.camunda.spin.dataformat.json.jackson>
                 <version.camunda.spin>1.6.7</version.camunda.spin>
                 <version.resteasy.spring.boot>3.0.0.Final</version.resteasy.spring.boot>
                 <version.resteasy.jaxrs>3.0.12.Final</version.resteasy.jaxrs>
