-included change request from Bernd Breier

--- a/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
@@ -1,3 +1,5 @@
+taskana.outbox.schema = taskana_tables
+
 taskana.adapter.outbox.rest.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
 #taskana.adapter.outbox.rest.datasource.jndi=jdbc/ProcessEngine
 
