--- a/taskana-adapter-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-test/src/main/resources/taskana-outbox.properties
@@ -1,3 +1,5 @@
+taskana.outbox.schema = taskana_tables
+
 #taskana.adapter.outbox.rest.datasource.driver=org.postgresql.Driver
 #taskana.adapter.outbox.rest.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #taskana.adapter.outbox.rest.datasource.username=postgres
