TSK-1054: removed build warnings

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: linux
 dist: xenial
 
 language: java
@@ -17,7 +18,7 @@ stages:
   - name: Release / Deploy
     if: repo = 'Taskana/TaskanaAdapter' AND (tag =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ OR branch = master) AND type != pull_request
 
-matrix:
+jobs:
   include:
     - stage: Test
       install: skip
