--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -10,6 +10,7 @@
 
         <modelVersion>4.0.0</modelVersion>
         <artifactId>taskana-adapter-camunda-listener</artifactId>
+        <name>${project.groupId}:${project.artifactId}</name>
 
         <dependencies>
                 <dependency>
