--- a/taskana-adapter-camunda-spring-boot-sample/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-sample/pom.xml
@@ -13,7 +13,7 @@
         <artifactId>taskana-adapter-camunda-spring-boot-sample</artifactId>
         <packaging>jar</packaging>
 
-        <name>taskana-adapter-camunda-spring-boot-sample</name>
+        <name>${project.groupId}:${project.artifactId}</name>
         <url>http://maven.apache.org</url>
 
 
