--- a/taskana-adapter-camunda-system-connector/pom.xml
+++ b/taskana-adapter-camunda-system-connector/pom.xml
@@ -13,7 +13,7 @@
         <artifactId>taskana-adapter-camunda-system-connector</artifactId>
         <packaging>jar</packaging>
 
-        <name>taskana-adapter-camunda-system-connector</name>
+        <name>${project.groupId}:${project.artifactId}</name>
         <description>System connector between taskana-adapter and Camunda</description>
 
 
