--- a/taskana-adapter-taskana-connector/pom.xml
+++ b/taskana-adapter-taskana-connector/pom.xml
@@ -12,7 +12,7 @@
         <modelVersion>4.0.0</modelVersion>
         <artifactId>taskana-adapter-taskana-connector</artifactId>
         <packaging>jar</packaging>
-        <name>taskana-adapter-taskana-connector</name>
+        <name>${project.groupId}:${project.artifactId}</name>
         <description>Connector between taskana-adapter and Taskana</description>
 
         <dependencies>
