TSK-1091: travis now ignoring dependabot branches for push events

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ cache:
   directories:
     - $HOME/.m2
 
+branches:
+  except:
+    - /dependabot.*/
+
 stages:
   - name: Test
   - name: Release / Deploy
