--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -23,6 +23,12 @@
                         <artifactId>jackson-databind</artifactId>
                         <version>2.10.0</version>
                 </dependency>
+          <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.4</version>
+            <scope>compile</scope>
+          </dependency>
         </dependencies>
 
 </project>
