--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
       script: |
         mvn deploy -T 4C -P `[[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
         --settings ci/mvnsettings.xml -DskipTests -Dcheckstyle.skip \
-        -pl !:taskana-adapter-camunda-listener-example,!:taskana-adapter-test
+        -pl !:taskana-adapter-camunda-listener-example,!:taskana-adapter-camunda-spring-boot-test
       before_cache: rm -rf $HOME/.m2/repository/pro/taskana
       # travis_terminate is necessary since after_success is a job phase which can change the build result.
       # it is not documented, so this is a little hack. see: https://docs.travis-ci.com/user/job-lifecycle/#breaking-the-build
